--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Nav Right (responsive two-row at 1080px, single row otherwise) -->
     <nav class="hidden md:flex twonav gap-4 w-full justify-end items-center">
       <div class="twonav-row flex gap-4">
-        <a href="#" class="font-normal text-[18px] px-4 py-2 rounded-lg transition hover:bg-blue-100 hover:text-blue-600 text-center">Курорт</a>
+        <a href="https://snowboard4.vercel.app/" class="font-normal text-[18px] px-4 py-2 rounded-lg transition hover:bg-blue-100 hover:text-blue-600 text-center">Курорт</a>
         <a href="#" class="font-normal text-[18px] px-4 py-2 rounded-lg transition hover:bg-blue-100 hover:text-blue-600 text-center">Проживание</a>
         <a href="#" class="font-normal text-[18px] px-4 py-2 rounded-lg transition hover:bg-blue-100 hover:text-blue-600 text-center">Услуги и тарифы</a>
       </div>
@@ -118,9 +118,9 @@
     aria-label="Close"
   >&times;</button>
   <nav class="flex flex-col gap-3 px-4 text-[14px] text-left">
-    <a href="#" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Курорт</a>
-    <a href="#" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Проживание</a>
-    <a href="#" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Услуги и тарифы</a>
+    <a href="https://snowboard-part-2.vercel.app/" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Курорт</a>
+    <a href="https://barbeque-snowboarding.vercel.app/" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Проживание</a>
+    <a href="" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Услуги и тарифы</a>
     <a href="#" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Афиша</a>
     <a href="#" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Для бизнеса</a>
     <a href="#" class="font-semibold text-blue-500 hover:bg-blue-100 hover:text-blue-600 px-3 py-2 rounded-lg transition active:scale-95 text-left">Купить онлайн</a>
@@ -157,19 +157,19 @@
             <button class="flex items-center text-gray-700 text-sm font-semibold mb-2">
               <span class="mr-2">›</span> Свернуть
             </button>
-            <a href="#" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
+            <a href="https://snowboard-part-2.vercel.app/" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
               <img src="./icons/t1.png" alt="" class="w-6 h-6">
               Веб-камеры
             </a>
-            <a href="#" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
+            <a href="https://barbeque-snowboarding.vercel.app/" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
               <img src="./icons/t2.png" alt="" class="w-6 h-6">
               Канатные дороги
             </a>
-            <a href="#" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
+            <a href="https://snowboard4.vercel.app/" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
               <img src="./icons/t3.png" alt="" class="w-6 h-6">
               Билеты
             </a>
-            <a href="#" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
+            <a href="https://snowboard-part-2.vercel.app/" class="flex items-center gap-3 text-blue-700 font-medium hover:text-blue-900 transition">
               <img src="./icons/t4.png" alt="" class="w-6 h-6">
               Карта
             </a>
@@ -749,7 +749,10 @@ BBQ площадки        </h2>
         </span>
       </div>
     </div>
+    <h3 style="font-weight: 700;color: blue;">SHERZOD_USMANOVV</h3>
   </div>
+
+
 </footer>
 
 
